<resources>
    <string name="app_name">Lab 3.3 Navigation Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="import_fragment">import fragment</string>
    <string name="Button_Message">Show Message</string>
    <string name="gallery">Gallery</string>
    <string name="button_get_file">Get File</string>
</resources>
